# Arxiv_Debate

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  test.txt
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: lint.yaml
app/: __main__.py  main.py
app/apis/: arxiv_api.py  gemini_api.py
app/assets/: layout.css
app/pages/: about.py  home.py
app/setup/: environment.py
app/utils/: arxiv_xml_extr.py
