[tool.poetry]
name = "arxiv-debate"
version = "0.1.0"
description = ""
authors = ["Pooria"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
black = "^24.10.0"
pre-commit = "^4.0.1"
dash = "^2.18.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
