[tool.poetry]
name = "arxiv-debate"
version = "0.1.0"
description = ""
authors = ["Pooria"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
black = "^24.10.0"
pre-commit = "^4.0.1"
dash = "^2.18.2"
pandas = "^2.2.3"
requests = "^2.32.3"
google-generativeai = "^0.8.3"
python-dotenv = "^1.0.1"
dash-bootstrap-components = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
